--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=.8">
 </head>
 <body>
-	<script src="./static/app.bundle.js"></script>	
-	/
+  <script src="./public/dist/app.bundle.js"></script>	
+  <div class="wrapper">
+    <a href="https://github.com/harwoodjp/static-starter">repo</a>
+  </div>
 </body>
 </html>
