--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <script src="./public/dist/app.bundle.js"></script>	
-  <div class="wrapper">
+  <div class="container">
     <a href="https://github.com/harwoodjp/static-starter">repo</a>
   </div>
 </body>
