--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=.8">
 </head>
 <body>
-  <script src="./public/dist/app.bundle.js"></script>	
   <div class="container">
-    <a href="https://github.com/harwoodjp/static-starter">repo</a>
+    <div id="app"></div>
   </div>
+  <script src="./public/dist/app.bundle.js"></script>	  
 </body>
 </html>
